--- a/index.html
+++ b/index.html
@@ -1,4 +1,43 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"> 
+    <title>My Project</title>
+    
+</head>
+<body>
+<h1>Jayashree's Portfolio</h1>
+<h2>I'm a Web Developer</h2>
+<hr/>
+<a href="./public/movie-ranking.html">Movie ranking project</a>
+<h3>The Best Movies According to Angela</h3>
+<h4>My top 3 movies of all-time.</h4>
+<hr />
+<h5>Spirited Away</h5>
+<p>This is my favourite anime. I love the beautiful images.</p>
+<h5>Ex Machina</h5>
+<p>Really cool sci-fi movie.</p>
+<h5>Drive</h5>
+<p>Super beautiful film. Really artistic.</p>
+<a href="./public/birthday-invite.html">Birthday Invite Project</a>
+<h1>It's My Birthday!</h1>
+<h2>On the 12th May</h2>
+
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
+  alt="purple birthday cake with candles" />
+
+<h3>What to bring:</h3>
+<ul>
+  <li>Baloons (I love baloons)</li>
+  <li>Cake (I'm really good at eating)</li>
+  <li>An appetite (There will be lots of food)</li>
+</ul>
+
+
+<a href="./public/about.html">Abou Me</a> <a href="./public/contact.html">contact Me</a>
+</body>
+</html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
